<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_menu"
        android:id="@+id/main_menu_text"
        android:layout_marginTop="20dp"
        android:textStyle="bold|italic"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/market"
        android:id="@+id/main_menu_market_button"
        android:layout_below="@+id/main_menu_text"
        android:layout_marginTop="50dp"
        android:layout_alignLeft="@+id/main_menu_text"
        android:layout_alignStart="@+id/main_menu_text"
        android:layout_alignRight="@+id/main_menu_text"
        android:layout_alignEnd="@+id/main_menu_text"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/friends"
        android:id="@+id/main_menu_friends_button"
        android:layout_below="@+id/main_menu_market_button"
        android:layout_alignLeft="@+id/main_menu_market_button"
        android:layout_alignStart="@+id/main_menu_market_button"
        android:layout_alignRight="@+id/main_menu_market_button"
        android:layout_alignEnd="@+id/main_menu_market_button"
        android:layout_marginTop="40dp"
        android:singleLine="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/profile"
        android:id="@+id/main_menu_profile_button"
        android:layout_below="@+id/main_menu_friends_button"
        android:layout_alignLeft="@+id/main_menu_friends_button"
        android:layout_alignStart="@+id/main_menu_friends_button"
        android:layout_alignRight="@+id/main_menu_friends_button"
        android:layout_alignEnd="@+id/main_menu_friends_button"
        android:layout_marginTop="40dp"/>
</RelativeLayout>
